# linkeddata

./: ChangeLog.md  LICENSE  README.md  linkeddata.cabal  stack.yaml
linkeddata/: ChangeLog.md  README.md  linkeddata.cabal
linkeddata/src/: LinkedData.hs
linkeddata/src/LinkedData/: Format.hs  FromRDF.hs  Graphs.hs  IRI.hs  Namespaces.hs  QQ.hs  Query.hs  Serialisation.hs  ToRDF.hs  Types.hs  Utils.hs
linkeddata/src/LinkedData/Serialisation/: Common.hs  NTriplesParser.hs  NTriplesSerialiser.hs  Streaming.hs  TurtleParser.hs  TurtleSerialiser.hs
linkeddata/test/: Spec.hs  hhgttg.ttl
linkeddata/test/LinkedData/: Common.hs  FormatSpec.hs  FromRDFSpec.hs  GraphsSpec.hs  IRISpec.hs  NTriplesSpec.hs  QuerySpec.hs  TurtleSpec.hs
src/Data/: LinkedData.hs
src/Data/LinkedData/: Graphs.hs  IRI.hs  Query.hs  Types.hs  Utils.hs
src/Data/LinkedData/Serialisation/: NTriplesParser.hs  NTriplesSerialiser.hs  TurtleParser.hs  TurtleSerialiser.hs
src/LinkedData/: FromRDF.hs  Graphs.hs  IRI.hs  Query.hs  Types.hs  Utils.hs
src/LinkedData/Serialisation/: NTriplesParser.hs  NTriplesSerialiser.hs  Streaming.hs  TurtleParser.hs
test/: Spec.hs  hhgttg.ttl
test/Data/LinkedData/: PropertyTests.hs
test/LinkedData/: CommonSpec.hs  IRISpec.hs  NTriplesSpec.hs  QuerySpec.hs  TurtleSpec.hs
test/w3c/semantics/: convert-manifest.rb
