name:           linkeddata
version:        0.0.1.0
synopsis:       Linked Data for Haskell
description:    Please see the README on Github at <https://github.com/mjepronk/linkeddata#readme>
homepage:       https://github.com/mjepronk/linkeddata#readme
bug-reports:    https://github.com/mjepronk/linkeddata/issues
author:         Matthias Pronk
maintainer:     matthias+hackage@remakingthe.world
copyright:      (c) Matthias Pronk
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/mjepronk/linkeddata

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , binary
    , bytestring
    , containers
    , either
    , hashable
    , parsers
    , QuickCheck
    , resourcet
    , safe
    , streaming
    , streaming-commons
    , streaming-bytestring
    , template-haskell
    , text
    , transformers
  exposed-modules:
      LinkedData
    , LinkedData.Types
    , LinkedData.Serialisation
    , LinkedData.QQ
  other-modules:
      LinkedData.FromRDF
    , LinkedData.Graphs
    , LinkedData.IRI
    , LinkedData.Query
    , LinkedData.Serialisation.Common
    , LinkedData.Serialisation.NTriplesParser
    , LinkedData.Serialisation.NTriplesSerialiser
    , LinkedData.Serialisation.Streaming
    , LinkedData.Serialisation.TurtleParser
    , LinkedData.Serialisation.TurtleSerialiser
    , LinkedData.Utils
  default-language: Haskell2010
  ghc-options: -Wall -Wmissing-export-lists

test-suite linkeddata-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      LinkedData.CommonSpec
    , LinkedData.IRISpec
    , LinkedData.NTriplesSpec
    , LinkedData.QuerySpec
    , LinkedData.TurtleSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , linkeddata
    , bytestring
    , hspec
    , filepath
    , directory
    , QuickCheck
    , streaming
    , text
  default-language: Haskell2010

benchmark linkeddata-bench
  main-is: Main.hs
  hs-source-dirs: bench/speed
  type: exitcode-stdio-1.0
  build-depends:
      base >= 4.7 && <5
    , random
    , criterion
    , linkeddata
  ghc-options: -Wall
  default-language: Haskell2010
